--- a/fornt-end/package.json
+++ b/fornt-end/package.json
@@ -2,7 +2,7 @@
   "name": "fornt-end",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "/",
   "dependencies": {
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.7.0",
