--- a/fornt-end/package.json
+++ b/fornt-end/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.7.0",
+    "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
