--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mime": "^4.0.7",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-apple": "^2.0.2",
     "passport-facebook": "^3.0.0",
