--- a/fornt-end/package.json
+++ b/fornt-end/package.json
@@ -10,6 +10,7 @@
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "express": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.1.3",
