--- a/fornt-end/package.json
+++ b/fornt-end/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.3.1",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "yarn": "^1.22.22"
   },
   "scripts": {
     "start": "react-scripts start",
