--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
       commands:
         - curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
         - export NVM_DIR=$HOME/.nvm
-        - "[ -s \"$NVM_DIR/nvm.sh\" ] && . \"$NVM_DIR/nvm.sh\""   # Activează nvm
+        - source $NVM_DIR/nvm.sh
         - nvm install
         - nvm use
         - yarn install
