--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sharp": "^0.34.1",
+    "sitemap": "^8.0.0",
     "stripe": "^17.6.0",
     "uuid": "^11.0.5"
   },
