--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
+    "i18next": "^25.2.1",
     "jsonwebtoken": "^9.0.2",
     "mime": "^4.0.7",
     "multer": "^1.4.5-lts.1",
@@ -36,6 +37,7 @@
     "pm2": "^6.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.2",
     "sharp": "^0.34.1",
     "sitemap": "^8.0.0",
     "stripe": "^17.6.0",
