--- a/fornt-end/package.json
+++ b/fornt-end/package.json
@@ -10,10 +10,13 @@
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
+    "i18next": "^25.2.1",
+    "i18next-http-backend": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
+    "react-i18next": "^15.5.2",
     "react-router": "^7.1.3",
     "react-router-dom": "^7.1.3",
     "react-scripts": "^5.0.1",
